Fix word wrap issue

--- a/app/jvm/src/main/assets/stylesheets/main.less
+++ b/app/jvm/src/main/assets/stylesheets/main.less
@@ -75,6 +75,6 @@ table.table-bordered {
 /****** TaskEditor ******/
 .task-editor {
   li {
-    white-space: pre;
+    white-space: pre-wrap;
   }
 }
